@@ -135,12 +135,17 @@
 #map_library_opt /etc/perdition/popmap.re
 #map_library_opt ""
 
+# --no_daemon:
+# Do not detach from terminal. 
+# Makes no sense if -i|--inetd_mode is in opperation.
+#no_daemon
+
+
 # n|no_lookup
 # Disable host and port lookup.
 # Please note that if this option is enabled, then perdition will
 # not resolve hostnames returned by popmap lookups, thus your popmap
 # must return ip addresses instead.
-
 #n
 #no_lookup
 
